fix: Images and comment work in postman with node